tests/outref/TUC002.ref
OCTO> select * from names where notathing = 0;
[ERROR] PATH:LINENUM DATE TIME : Unknown column: NOTATHING
Error with syntax near (line 1, column 26):

select * from names where notathing = 0;
                          ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select * from names where notathing = 0;

OCTO> select * from names limit 1;
0|Zero|Cool
OCTO> 
